Mon Dec 18 10:50:34 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/Makefile.am: distribute enum_cap.h

Fri Dec 15 14:41:14 EST 2006	JK Lowden <jklowden@freetds.org>
	* src/tds/tds_willconvert.pl allow varbinary

Thu Dec 14 22:18:16 EST 2006	JK Lowden <jklowden@schemamania.org>
	* src/tds/mem.c src/tds/unittests/t0001.c
	- Added tds_capability_set and enumerated capabilities
	* src/tds/enum_cap.h added

Tue Dec 12 08:45:12 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsodbc.h src/odbc/odbc.c src/odbc/odbc_util.c:
	- improve describecol test

Sun Dec 10 16:04:02 EST 2006	JK Lowden <jklowden@schemamania.org>
	* doc/htdoc/faq.html minor fixes
	* src/apps/tsql.c send *sybase* charset name in login record
	* src/tds/net.c src/tds/read.c a little less logging

Thu Dec  7 17:06:50 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/token.c: make get_send_data works

Tue Dec  5 11:42:04 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/funccall.c: add a test

Fri Dec  1 16:45:59 EST 2006	JK Lowden <jklowden@freetds.org>
	* include/sybdb.h src/dblib/bcp.c src/apps/freebcp.c
	- Changed freetbcp batch-copied information messages to 
	- match the output of Sybase's bcp utility.  

Wed Nov 29 15:46:38 EST 2006	JK Lowden <jklowden@freetds.org>
	* src/apps/tsql.c fixed broken "go" option handling.

Tue Nov 28 11:52:27 EST 2006	JK Lowden <jklowden@freetds.org>
	* src/apps/tsql.c fix -o option code
	* src/tds/net.c reorganize tds_open_socket()

Mon Nov 27 18:31:18 EST 2006	JK Lowden <jklowden@freetds.org>
	* src/tds/net.c more detailed log of connect(2)

Sun Nov 26 15:26:31 EST 2006	JK Lowden <jklowden@schemamania.org>
	* src/apps/tsql.c added connection timer feedback
	* src/tds/login.c src/tds/net.c slightly better logging

Thu Nov 23 09:43:00 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/genparams.c:
	- fix possible problem with very remote servers
