@@ -1,3 +1,7 @@
+Wed Dec 20 22:47:36 EST 2006	JK Lowden <jklowden@schemamania.org>
+	* src/tds/iconv.c src/tds/token.c log server charset changes
+	* src/tds/unittests/convert.c permit varbinary
+
 Mon Dec 18 10:50:34 CET 2006    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/tds/Makefile.am: distribute enum_cap.h
 
